fixed styles in 'notificaciones' overflow

--- a/styles.scss
+++ b/styles.scss
@@ -384,7 +384,8 @@ body {
     width: 40vw;
     height: auto;
     min-height: 400px;
-
+    max-height: 80vh;
+    overflow: auto;
     z-index: 100;
 
 
@@ -397,22 +398,27 @@ body {
     padding: 0.5rem;
     box-shadow: 0px 0px 50px 5px rgba(0,0,0,0.6);
     div {
+        width: 100%;
+        height: 100%;
         display: flex;
         align-items: center;
         justify-content: left;
+        margin-top: 0.5rem;
         color: #000;
         button {
             border: none;
             outline: none;
             background-color: inherit;
             cursor: pointer;
-            width: 25px;
             margin-right: 0.5rem;
             svg {
-                width: 100%;
-                height: 100%;
+                width: 25px;
+                height: 25px;
                 fill:  #333;
             }
+        }
+        span {
+            text-align: left;
         }
     }
 }
